[gd_scene load_steps=12 format=3 uid="uid://dfhenhhamjbxb"]

[ext_resource type="Script" path="res://main.gd" id="1_l6jnq"]
[ext_resource type="PackedScene" uid="uid://ltmp2ee8jmru" path="res://core/camera/player_camera.tscn" id="2_5y4le"]
[ext_resource type="PackedScene" uid="uid://ds6oq1g4eeq14" path="res://game_manager.tscn" id="2_xhkyp"]
[ext_resource type="PackedScene" uid="uid://bkthjsnqioj06" path="res://tree/MotherTree.tscn" id="3_gu0s8"]
[ext_resource type="Script" path="res://game_manager.gd" id="3_jfyef"]
[ext_resource type="PackedScene" uid="uid://lrqiy6x4ei47" path="res://ui/game_over_screen/game_over_screen.tscn" id="4_qgm76"]
[ext_resource type="PackedScene" uid="uid://blwjghhf1nrng" path="res://core/tilemap/tile_map.tscn" id="8_vvobf"]
[ext_resource type="PackedScene" uid="uid://dtg1nbj1p5i5q" path="res://core/building/building_controller.tscn" id="10_i0iuh"]
[ext_resource type="PackedScene" uid="uid://kjukeki4xp0u" path="res://core/spawner/spawner.tscn" id="10_rl5k3"]
[ext_resource type="PackedScene" uid="uid://di3wfpwy40eir" path="res://core/building/tile_click_controller.tscn" id="11_xa3uc"]
[ext_resource type="PackedScene" uid="uid://dthcr7jifvtx8" path="res://ui/overlay_ui.tscn" id="12_prmxn"]

[node name="Main" type="Node2D"]
script = ExtResource("1_l6jnq")

[node name="GameManager" parent="." instance=ExtResource("2_xhkyp")]
script = ExtResource("3_jfyef")

[node name="GameOverScreen" parent="GameManager" instance=ExtResource("4_qgm76")]

[node name="PlayerCamera" parent="." instance=ExtResource("2_5y4le")]
position = Vector2(667, 732)

[node name="MotherTree" parent="." instance=ExtResource("3_gu0s8")]
position = Vector2(662, 728)

[node name="Spawner" parent="." instance=ExtResource("10_rl5k3")]
position = Vector2(1863, 759)

[node name="OverlayUI" parent="." instance=ExtResource("12_prmxn")]

[node name="BuildingController" parent="." instance=ExtResource("10_i0iuh")]
position = Vector2(6, 173)

[node name="TileClickController" parent="." instance=ExtResource("11_xa3uc")]
position = Vector2(4, 179)

[node name="TileMap" parent="." instance=ExtResource("8_vvobf")]
layer_0/z_index = -1
layer_0/tile_data = PackedInt32Array()
layer_4/name = "barriers"
layer_4/tile_data = PackedInt32Array(18, 196612, 0, 19, 196612, 0, 20, 196612, 0, 21, 196612, 0, 65557, 196612, 0, 131093, 196612, 0, 196630, 196612, 0, 262166, 196612, 0, 327702, 196612, 0, 393238, 196612, 0, 458774, 196612, 0, 524310, 196612, 0, 589846, 196612, 0, 655382, 196612, 0, 720918, 196612, 0, 786454, 196612, 0, 851990, 196612, 0, 917526, 196612, 0, 983062, 196612, 0, 1048598, 196612, 0, 1048599, 196612, 0, 1114135, 196612, 0, 1114136, 196612, 0, 1179672, 196612, 0, 1179673, 196612, 0, 1245209, 196612, 0, 1245210, 196612, 0, 1310746, 196612, 0, 1310747, 196612, 0, 1310748, 196612, 0, 1310749, 196612, 0, 1245213, 196612, 0, 1245214, 196612, 0, 1245215, 196612, 0, 1245216, 196612, 0, 1179680, 196612, 0, 1179681, 196612, 0, 1179682, 196612, 0, 1114146, 196612, 0, 1114147, 196612, 0, 1114148, 196612, 0, 1048612, 196612, 0, 1048613, 196612, 0, 1048614, 196612, 0, 983078, 196612, 0, 983079, 196612, 0, 917543, 196612, 0, 917544, 196612, 0, 852008, 196612, 0, 852009, 196612, 0, 917545, 196612, 0, 917546, 196612, 0, 917547, 196612, 0, 917548, 196612, 0, 983085, 196612, 0, 983086, 196612, 0, 983087, 196612, 0, 983088, 196612, 0, 983089, 196612, 0, 983090, 196612, 0, 1048626, 196612, 0, 1114162, 196612, 0, 1114163, 196612, 0, 1179699, 196612, 0, 1245235, 196612, 0, 1245236, 196612, 0, 1310772, 196612, 0, 1376308, 196612, 0, 1441844, 196612, 0, 1507380, 196612, 0, 1572916, 196612, 0, 1572917, 196612, 0, 1638453, 196612, 0, 1703989, 196612, 0, 1703988, 196612, 0, 1769523, 196612, 0, 1769522, 196612, 0, 1769521, 196612, 0, 1835057, 196612, 0, 1835056, 196612, 0, 1900592, 196612, 0, 1900591, 196612, 0, 1966127, 196612, 0, 1966126, 196612, 0, 2031661, 196612, 0, 2031660, 196612, 0, 2031659, 196612, 0, 2031658, 196612, 0, 1966122, 196612, 0, 1966121, 196612, 0, 1966120, 196612, 0, 1900584, 196612, 0, 1900583, 196612, 0, 1900582, 196612, 0, 1835046, 196612, 0, 1835045, 196612, 0, 1835044, 196612, 0, 1769508, 196612, 0, 1769507, 196612, 0, 1769506, 196612, 0, 1769505, 196612, 0, 1703969, 196612, 0, 1703968, 196612, 0, 1703967, 196612, 0, 1638431, 196612, 0, 1638430, 196612, 0, 1572894, 196612, 0, 1572893, 196612, 0, 1572892, 196612, 0, 1572891, 196612, 0, 1507355, 196612, 0, 1507354, 196612, 0, 1507353, 196612, 0, 1441817, 196612, 0, 1376281, 196612, 0, 1376280, 196612, 0, 1310744, 196612, 0, 1310743, 196612, 0, 1310742, 196612, 0, 1310741, 196612, 0, 1310740, 196612, 0, 1310739, 196612, 0, 1310738, 196612, 0, 1310737, 196612, 0, 1310736, 196612, 0, 1376272, 196612, 0, 1376271, 196612, 0, 1441807, 196612, 0, 1507343, 196612, 0, 1507342, 196612, 0, 1572878, 196612, 0, 1638413, 196612, 0, 1703949, 196612, 0, 1769485, 196612, 0, 1835021, 196612, 0, 1900557, 196612, 0, 1966093, 196612, 0, 2031629, 196612, 0, 2097165, 196612, 0, 2162701, 196612, 0, 2162702, 196612, 0, 2228238, 196612, 0, 2293774, 196612, 0, 2359310, 196612, 0, 2359311, 196612, 0, 2424847, 196612, 0, 2490384, 196612, 0, 2490385, 196612, 0, 2555921, 196612, 0, 2555922, 196612, 0, 2555923, 196612, 0, 2555924, 196612, 0, 2621460, 196612, 0, 2621461, 196612, 0, 2621462, 196612, 0, 2621463, 196612, 0, 2621464, 196612, 0, 2621465, 196612, 0, 2621466, 196612, 0, 2621467, 196612, 0, 2621468, 196612, 0, 2621469, 196612, 0, 2621470, 196612, 0, 2621471, 196612, 0, 2621472, 196612, 0, 2687008, 196612, 0, 2687009, 196612, 0, 2687010, 196612, 0, 2687011, 196612, 0, 2687012, 196612, 0, 2687013, 196612, 0, 2687014, 196612, 0, 2687015, 196612, 0, 2621479, 196612, 0, 2621480, 196612, 0, 2621481, 196612, 0, 2621482, 196612, 0, 2621483, 196612, 0, 2621484, 196612, 0, 2621485, 196612, 0, 2621486, 196612, 0, 2621487, 196612, 0, 2621488, 196612, 0, 2621489, 196612, 0, 2621490, 196612, 0, 2621491, 196612, 0, 2621492, 196612, 0, 2621493, 196612, 0, 2621494, 196612, 0, 2621495, 196612, 0, 2621496, 196612, 0, 2621497, 196612, 0, 2621498, 196612, 0, 2621499, 196612, 0, 2621500, 196612, 0, 2621501, 196612, 0, 2621502, 196612, 0, 2621503, 196612, 0, 2621504, 196612, 0, 2621505, 196612, 0, 2555969, 196612, 0, 2555970, 196612, 0, 2555971, 196612, 0, 2555972, 196612, 0, 2555973, 196612, 0, 2555974, 196612, 0, 2555975, 196612, 0, 2555976, 196612, 0, 2555977, 196612, 0, 2555978, 196612, 0, 65554, 196612, 0, 131090, 196612, 0, 196626, 196612, 0, 262162, 196612, 0, 327698, 196612, 0, 393234, 196612, 0, 393233, 196612, 0, 458769, 196612, 0, 524305, 196612, 0, 589841, 196612, 0, 655377, 196612, 0, 720913, 196612, 0, 786449, 196612, 0, 851985, 196612, 0, 917521, 196612, 0, 983057, 196612, 0, 1048593, 196612, 0, 1048592, 196612, 0, 1114128, 196612, 0, 1114127, 196612, 0, 1179662, 196612, 0, 1179661, 196612, 0, 1245197, 196612, 0, 1245196, 196612, 0, 1310732, 196612, 0, 1310731, 196612, 0, 1376266, 196612, 0, 1441801, 196612, 0, 1441800, 196612, 0, 1507336, 196612, 0, 1507335, 196612, 0, 1572871, 196612, 0, 1572870, 196612, 0, 1638406, 196612, 0, 1638405, 196612, 0, 1703941, 196612, 0, 1703940, 196612, 0, 1769476, 196612, 0, 1769475, 196612, 0, 1835011, 196612, 0, 1835010, 196612, 0, 1835009, 196612, 0, 1900545, 196612, 0, 1900544, 196612, 0, 1966080, 196612, 0, 2031615, 196612, 0, 2097151, 196612, 0, 2097150, 196612, 0, 2424831, 196612, 0, 2359296, 196612, 0, 2293760, 196612, 0, 2293761, 196612, 0, 2293762, 196612, 0, 2293763, 196612, 0, 2228227, 196612, 0, 2228228, 196612, 0, 2162692, 196612, 0, 2162693, 196612, 0, 2162694, 196612, 0, 2097158, 196612, 0, 2031623, 196612, 0, 1966087, 196612, 0, 1966088, 196612, 0, 1900552, 196612, 0, 1900553, 196612, 0, 1966089, 196612, 0, 2031624, 196612, 0, 2097160, 196612, 0, 2162696, 196612, 0, 2228233, 196612, 0, 2293769, 196612, 0, 2359305, 196612, 0, 2424841, 196612, 0, 2490377, 196612, 0, 2555913, 196612, 0, 2621449, 196612, 0, 2686986, 196612, 0, 2686987, 196612, 0, 2752523, 196612, 0, 2752524, 196612, 0, 2818060, 196612, 0, 2818061, 196612, 0, 2818062, 196612, 0, 2818063, 196612, 0, 2818064, 196612, 0, 2883600, 196612, 0, 2883601, 196612, 0, 2424830, 196612, 0, 2359294, 196612, 0, 2293758, 196612, 0, 2228222, 196612, 0, 2162686, 196612, 0, 2031614, 196612, 0, 2818065, 196612, 0, 2883602, 196612, 0, 2883603, 196612, 0, 2949140, 196612, 0, 2949141, 196612, 0, 2949142, 196612, 0, 3014679, 196612, 0, 3014680, 196612, 0, 3014681, 196612, 0, 3014682, 196612, 0, 3080218, 196612, 0, 3080219, 196612, 0, 3080220, 196612, 0, 3080221, 196612, 0, 3080222, 196612, 0, 3080223, 196612, 0, 3080224, 196612, 0, 3080225, 196612, 0, 3014690, 196612, 0, 3014691, 196612, 0, 3014692, 196612, 0, 3014693, 196612, 0, 2949158, 196612, 0, 2949159, 196612, 0, 2949160, 196612, 0, 2949161, 196612, 0, 2949162, 196612, 0, 2883627, 196612, 0, 2883628, 196612, 0, 2883629, 196612, 0, 2883630, 196612, 0, 2883631, 196612, 0, 2883632, 196612, 0, 2883633, 196612, 0, 2883634, 196612, 0, 2883635, 196612, 0, 2883636, 196612, 0, 2883637, 196612, 0, 2883638, 196612, 0, 2883639, 196612, 0, 2949176, 196612, 0, 2949177, 196612, 0, 2949178, 196612, 0, 2883642, 196612, 0, 2883643, 196612, 0, 2883644, 196612, 0, 2883645, 196612, 0, 2883646, 196612, 0, 2883647, 196612, 0, 2883648, 196612, 0, 2883649, 196612, 0, 2883650, 196612, 0, 2883651, 196612, 0, 2883652, 196612, 0, 2883653, 196612, 0, 2883654, 196612, 0, 2818119, 196612, 0, 2818120, 196612, 0, 2818121, 196612, 0, 2818122, 196612, 0, 2818123, 196612, 0, 2818124, 196612, 0, 2752589, 196612, 0, 2687053, 196612, 0, 2621517, 196612, 0, 2621516, 196612, 0, 2555980, 196612, 0, 2555979, 196612, 0, 2752532, 196612, 0, 2686996, 196612, 0, 2686995, 196612, 0, 2621459, 196612, 0, 2621458, 196612, 0, 2621457, 196612, 0, 2621456, 196612, 0, 2555920, 196612, 0, 2555919, 196612, 0, 2490383, 196612, 0, 2490382, 196612, 0, 2424846, 196612, 0, 2424845, 196612, 0, 2359309, 196612, 0, 2293773, 196612, 0, 2228237, 196612, 0, 2228236, 196612, 0, 2162700, 196612, 0, 2097164, 196612, 0, 2031628, 196612, 0, 1966092, 196612, 0, 1900556, 196612, 0, 1835020, 196612, 0, 1769484, 196612, 0, 1703948, 196612, 0, 1638412, 196612, 0, 1572876, 196612, 0, 1507340, 196612, 0, 1441804, 196612, 0, 1376268, 196612, 0, 1376267, 196612, 0, 1441803, 196612, 0, 1441802, 196612, 0, 1507338, 196612, 0, 1507337, 196612, 0, 1572873, 196612, 0, 1572872, 196612, 0, 1638408, 196612, 0, 1638407, 196612, 0, 1703943, 196612, 0, 1703942, 196612, 0, 1769478, 196612, 0, 1769477, 196612, 0, 1835013, 196612, 0, 1835012, 196612, 0, 1900548, 196612, 0, 1900547, 196612, 0, 1900546, 196612, 0, 1966082, 196612, 0, 1966081, 196612, 0, 2031617, 196612, 0, 2031616, 196612, 0, 2097152, 196612, 0, 2162687, 196612, 0, 2228223, 196612, 0, 2293759, 196612, 0, 2359295, 196612, 0, 2228224, 196612, 0, 2162688, 196612, 0, 2162689, 196612, 0, 2097153, 196612, 0, 2097154, 196612, 0, 2031618, 196612, 0, 2031619, 196612, 0, 1966083, 196612, 0, 1966084, 196612, 0, 2031620, 196612, 0, 2097156, 196612, 0, 2097155, 196612, 0, 2162691, 196612, 0, 2162690, 196612, 0, 2228226, 196612, 0, 2228225, 196612, 0, 2097157, 196612, 0, 2031621, 196612, 0, 1966085, 196612, 0, 1900549, 196612, 0, 1900550, 196612, 0, 1835014, 196612, 0, 1835015, 196612, 0, 1769479, 196612, 0, 1769480, 196612, 0, 1703944, 196612, 0, 1703945, 196612, 0, 1638409, 196612, 0, 1638410, 196612, 0, 1572874, 196612, 0, 1572875, 196612, 0, 1507339, 196612, 0, 1638411, 196612, 0, 1703947, 196612, 0, 1703946, 196612, 0, 1769482, 196612, 0, 1769481, 196612, 0, 1835017, 196612, 0, 1835016, 196612, 0, 1835018, 196612, 0, 1900554, 196612, 0, 1966090, 196612, 0, 2031626, 196612, 0, 2031625, 196612, 0, 2097161, 196612, 0, 2162697, 196612, 0, 2162698, 196612, 0, 2097162, 196612, 0, 2097163, 196612, 0, 2031627, 196612, 0, 1966091, 196612, 0, 1900555, 196612, 0, 1835019, 196612, 0, 1769483, 196612, 0, 2162699, 196612, 0, 2228235, 196612, 0, 2228234, 196612, 0, 2293770, 196612, 0, 2359306, 196612, 0, 2424842, 196612, 0, 2490378, 196612, 0, 2555914, 196612, 0, 2621450, 196612, 0, 2621451, 196612, 0, 2555915, 196612, 0, 2490379, 196612, 0, 2424843, 196612, 0, 2359307, 196612, 0, 2293771, 196612, 0, 2293772, 196612, 0, 2359308, 196612, 0, 2424844, 196612, 0, 2490380, 196612, 0, 2555916, 196612, 0, 2621452, 196612, 0, 2686988, 196612, 0, 2686989, 196612, 0, 2621453, 196612, 0, 2555917, 196612, 0, 2490381, 196612, 0, 2555918, 196612, 0, 2621454, 196612, 0, 2686990, 196612, 0, 2752526, 196612, 0, 2752525, 196612, 0, 2752527, 196612, 0, 2686991, 196612, 0, 2621455, 196612, 0, 2686992, 196612, 0, 2752528, 196612, 0, 2752529, 196612, 0, 2686993, 196612, 0, 2686994, 196612, 0, 2752530, 196612, 0, 2818066, 196612, 0, 2818067, 196612, 0, 2752531, 196612, 0, 2818068, 196612, 0, 2883604, 196612, 0, 2883605, 196612, 0, 2818069, 196612, 0, 2752533, 196612, 0, 2686997, 196612, 0, 2686998, 196612, 0, 2752534, 196612, 0, 2818070, 196612, 0, 2883606, 196612, 0, 2883607, 196612, 0, 2818071, 196612, 0, 2752535, 196612, 0, 2686999, 196612, 0, 2687000, 196612, 0, 2752536, 196612, 0, 2818072, 196612, 0, 2883608, 196612, 0, 2949144, 196612, 0, 2949143, 196612, 0, 2949145, 196612, 0, 2883609, 196612, 0, 2818073, 196612, 0, 2752537, 196612, 0, 2687001, 196612, 0, 2687002, 196612, 0, 2752538, 196612, 0, 2818074, 196612, 0, 2883610, 196612, 0, 2949146, 196612, 0, 2949147, 196612, 0, 2883611, 196612, 0, 2818075, 196612, 0, 2752539, 196612, 0, 2687003, 196612, 0, 2687004, 196612, 0, 2752540, 196612, 0, 2818076, 196612, 0, 2883612, 196612, 0, 2949148, 196612, 0, 3014684, 196612, 0, 3014683, 196612, 0, 3014685, 196612, 0, 2949149, 196612, 0, 2883613, 196612, 0, 2818077, 196612, 0, 2752541, 196612, 0, 2687005, 196612, 0, 2687006, 196612, 0, 2752542, 196612, 0, 2818078, 196612, 0, 2883614, 196612, 0, 2949150, 196612, 0, 3014686, 196612, 0, 3014687, 196612, 0, 2949151, 196612, 0, 2883615, 196612, 0, 2818079, 196612, 0, 2752543, 196612, 0, 2687007, 196612, 0, 2752544, 196612, 0, 2818080, 196612, 0, 2883616, 196612, 0, 2949152, 196612, 0, 3014688, 196612, 0, 3014689, 196612, 0, 2949153, 196612, 0, 2883617, 196612, 0, 2818081, 196612, 0, 2752545, 196612, 0, 2752546, 196612, 0, 2818082, 196612, 0, 2883618, 196612, 0, 2949154, 196612, 0, 2949155, 196612, 0, 2883619, 196612, 0, 2818083, 196612, 0, 2752547, 196612, 0, 2752548, 196612, 0, 2818084, 196612, 0, 2883620, 196612, 0, 2949156, 196612, 0, 2949157, 196612, 0, 2883621, 196612, 0, 2818085, 196612, 0, 2752549, 196612, 0, 2752550, 196612, 0, 2818086, 196612, 0, 2883622, 196612, 0, 2883623, 196612, 0, 2818087, 196612, 0, 2752551, 196612, 0, 2752552, 196612, 0, 2687016, 196612, 0, 2687017, 196612, 0, 2752553, 196612, 0, 2818089, 196612, 0, 2818088, 196612, 0, 2883624, 196612, 0, 2883625, 196612, 0, 2883626, 196612, 0, 2818090, 196612, 0, 2752554, 196612, 0, 2687018, 196612, 0, 2687019, 196612, 0, 2752555, 196612, 0, 2818091, 196612, 0, 2818092, 196612, 0, 2752556, 196612, 0, 2687020, 196612, 0, 2687021, 196612, 0, 2752557, 196612, 0, 2818093, 196612, 0, 2818094, 196612, 0, 2752558, 196612, 0, 2687022, 196612, 0, 2687023, 196612, 0, 2752559, 196612, 0, 2818095, 196612, 0, 2818096, 196612, 0, 2752560, 196612, 0, 2687024, 196612, 0, 2687025, 196612, 0, 2752561, 196612, 0, 2818097, 196612, 0, 2818098, 196612, 0, 2752562, 196612, 0, 2687026, 196612, 0, 2687027, 196612, 0, 2752563, 196612, 0, 2818099, 196612, 0, 2818100, 196612, 0, 2752564, 196612, 0, 2687028, 196612, 0, 2687029, 196612, 0, 2752565, 196612, 0, 2818101, 196612, 0, 2818102, 196612, 0, 2752566, 196612, 0, 2687030, 196612, 0, 2687031, 196612, 0, 2752567, 196612, 0, 2818103, 196612, 0, 2818104, 196612, 0, 2752568, 196612, 0, 2687032, 196612, 0, 2687033, 196612, 0, 2752569, 196612, 0, 2818105, 196612, 0, 2883641, 196612, 0, 2883640, 196612, 0, 2818106, 196612, 0, 2752570, 196612, 0, 2687034, 196612, 0, 2687035, 196612, 0, 2752571, 196612, 0, 2818107, 196612, 0, 2818108, 196612, 0, 2752572, 196612, 0, 2687036, 196612, 0, 2687037, 196612, 0, 2752573, 196612, 0, 2818109, 196612, 0, 2818110, 196612, 0, 2752574, 196612, 0, 2687038, 196612, 0, 2687039, 196612, 0, 2752575, 196612, 0, 2818111, 196612, 0, 2818112, 196612, 0, 2752576, 196612, 0, 2687040, 196612, 0, 2687041, 196612, 0, 2752577, 196612, 0, 2818113, 196612, 0, 2818114, 196612, 0, 2752578, 196612, 0, 2687042, 196612, 0, 2621506, 196612, 0, 2621507, 196612, 0, 2687043, 196612, 0, 2752579, 196612, 0, 2818115, 196612, 0, 2818116, 196612, 0, 2752580, 196612, 0, 2687044, 196612, 0, 2621508, 196612, 0, 2621509, 196612, 0, 2687045, 196612, 0, 2752581, 196612, 0, 2818117, 196612, 0, 2818118, 196612, 0, 2752582, 196612, 0, 2687046, 196612, 0, 2621510, 196612, 0, 2621511, 196612, 0, 2687047, 196612, 0, 2752583, 196612, 0, 2752584, 196612, 0, 2687048, 196612, 0, 2621512, 196612, 0, 2621513, 196612, 0, 2687049, 196612, 0, 2752585, 196612, 0, 2752586, 196612, 0, 2687050, 196612, 0, 2621514, 196612, 0, 2621515, 196612, 0, 2687051, 196612, 0, 2752587, 196612, 0, 2752588, 196612, 0, 2687052, 196612, 0, 1900551, 196612, 0, 1966086, 196612, 0, 2031622, 196612, 0, 1376269, 196612, 0, 1310733, 196612, 0, 1310734, 196612, 0, 1245198, 196612, 0, 1245199, 196612, 0, 1179663, 196612, 0, 1179664, 196612, 0, 1245200, 196612, 0, 1245201, 196612, 0, 1179665, 196612, 0, 1114129, 196612, 0, 1114130, 196612, 0, 1048594, 196612, 0, 983058, 196612, 0, 917522, 196612, 0, 851986, 196612, 0, 786450, 196612, 0, 720914, 196612, 0, 655378, 196612, 0, 589842, 196612, 0, 524306, 196612, 0, 458770, 196612, 0, 458771, 196612, 0, 393235, 196612, 0, 327699, 196612, 0, 262163, 196612, 0, 196627, 196612, 0, 131091, 196612, 0, 65555, 196612, 0, 65556, 196612, 0, 131092, 196612, 0, 196628, 196612, 0, 262164, 196612, 0, 327700, 196612, 0, 393236, 196612, 0, 458772, 196612, 0, 524308, 196612, 0, 524307, 196612, 0, 589843, 196612, 0, 655379, 196612, 0, 720915, 196612, 0, 786451, 196612, 0, 851987, 196612, 0, 917523, 196612, 0, 983059, 196612, 0, 1048595, 196612, 0, 1114131, 196612, 0, 1179667, 196612, 0, 1179666, 196612, 0, 1245202, 196612, 0, 1245203, 196612, 0, 1245204, 196612, 0, 1179668, 196612, 0, 1114132, 196612, 0, 1048596, 196612, 0, 983060, 196612, 0, 917524, 196612, 0, 851988, 196612, 0, 786452, 196612, 0, 720916, 196612, 0, 655380, 196612, 0, 589844, 196612, 0, 589845, 196612, 0, 524309, 196612, 0, 458773, 196612, 0, 393237, 196612, 0, 327701, 196612, 0, 262165, 196612, 0, 196629, 196612, 0, 655381, 196612, 0, 720917, 196612, 0, 786453, 196612, 0, 851989, 196612, 0, 917525, 196612, 0, 983061, 196612, 0, 1048597, 196612, 0, 1114133, 196612, 0, 1179669, 196612, 0, 1245205, 196612, 0, 1245206, 196612, 0, 1179670, 196612, 0, 1114134, 196612, 0, 1179671, 196612, 0, 1245207, 196612, 0, 1245208, 196612, 0, 1310735, 196612, 0, 1376270, 196612, 0, 1441806, 196612, 0, 1441805, 196612, 0, 1507341, 196612, 0, 1572877, 196612, 0, 1441830, 196612, 0, 1376294, 196612, 0, 1310758, 196612, 0, 1245222, 196612, 0, 1179686, 196612, 0, 1114150, 196612, 0, 1114149, 196612, 0, 1179685, 196612, 0, 1179684, 196612, 0, 1179683, 196612, 0, 1245219, 196612, 0, 1245218, 196612, 0, 1245217, 196612, 0, 1310753, 196612, 0, 1310752, 196612, 0, 1310751, 196612, 0, 1310750, 196612, 0, 1376286, 196612, 0, 1376285, 196612, 0, 1376284, 196612, 0, 1376283, 196612, 0, 1376282, 196612, 0, 1441818, 196612, 0, 1441819, 196612, 0, 1441820, 196612, 0, 1507356, 196612, 0, 1507357, 196612, 0, 1441821, 196612, 0, 1441822, 196612, 0, 1507358, 196612, 0, 1507359, 196612, 0, 1441823, 196612, 0, 1376287, 196612, 0, 1376288, 196612, 0, 1441824, 196612, 0, 1507360, 196612, 0, 1572896, 196612, 0, 1572895, 196612, 0, 1638432, 196612, 0, 1638433, 196612, 0, 1572897, 196612, 0, 1507361, 196612, 0, 1441825, 196612, 0, 1376289, 196612, 0, 1376290, 196612, 0, 1310754, 196612, 0, 1310755, 196612, 0, 1376291, 196612, 0, 1441827, 196612, 0, 1441826, 196612, 0, 1507362, 196612, 0, 1572898, 196612, 0, 1638434, 196612, 0, 1703970, 196612, 0, 1703971, 196612, 0, 1638435, 196612, 0, 1572899, 196612, 0, 1507363, 196612, 0, 1507364, 196612, 0, 1441828, 196612, 0, 1376292, 196612, 0, 1310756, 196612, 0, 1245220, 196612, 0, 1245221, 196612, 0, 1310757, 196612, 0, 1376293, 196612, 0, 1441829, 196612, 0, 1507365, 196612, 0, 1572901, 196612, 0, 1572900, 196612, 0, 1638436, 196612, 0, 1703972, 196612, 0, 1703973, 196612, 0, 1638437, 196612, 0, 1638438, 196612, 0, 1572902, 196612, 0, 1507366, 196612, 0, 1507367, 196612, 0, 1441831, 196612, 0, 1376295, 196612, 0, 1310759, 196612, 0, 1245223, 196612, 0, 1179687, 196612, 0, 1114151, 196612, 0, 1048615, 196612, 0, 1048616, 196612, 0, 983080, 196612, 0, 983081, 196612, 0, 1048617, 196612, 0, 1114153, 196612, 0, 1114152, 196612, 0, 1179688, 196612, 0, 1245224, 196612, 0, 1310760, 196612, 0, 1376296, 196612, 0, 1441832, 196612, 0, 1507368, 196612, 0, 1572904, 196612, 0, 1572903, 196612, 0, 1638439, 196612, 0, 1703975, 196612, 0, 1703974, 196612, 0, 1769510, 196612, 0, 1769509, 196612, 0, 1769511, 196612, 0, 1835047, 196612, 0, 1835048, 196612, 0, 1769512, 196612, 0, 1703976, 196612, 0, 1638440, 196612, 0, 1638441, 196612, 0, 1572905, 196612, 0, 1507369, 196612, 0, 1441833, 196612, 0, 1376297, 196612, 0, 1310761, 196612, 0, 1245225, 196612, 0, 1179689, 196612, 0, 1179690, 196612, 0, 1114154, 196612, 0, 1048618, 196612, 0, 983082, 196612, 0, 983083, 196612, 0, 1048619, 196612, 0, 1114155, 196612, 0, 1179691, 196612, 0, 1245227, 196612, 0, 1245226, 196612, 0, 1310762, 196612, 0, 1376298, 196612, 0, 1441834, 196612, 0, 1507370, 196612, 0, 1572906, 196612, 0, 1638442, 196612, 0, 1703978, 196612, 0, 1703977, 196612, 0, 1769513, 196612, 0, 1835049, 196612, 0, 1900585, 196612, 0, 1900586, 196612, 0, 1835050, 196612, 0, 1769514, 196612, 0, 1769515, 196612, 0, 1703979, 196612, 0, 1638443, 196612, 0, 1572907, 196612, 0, 1507371, 196612, 0, 1441835, 196612, 0, 1376299, 196612, 0, 1310763, 196612, 0, 1310764, 196612, 0, 1245228, 196612, 0, 1179692, 196612, 0, 1114156, 196612, 0, 1048620, 196612, 0, 983084, 196612, 0, 1048621, 196612, 0, 1114157, 196612, 0, 1179693, 196612, 0, 1245229, 196612, 0, 1310765, 196612, 0, 1376301, 196612, 0, 1376300, 196612, 0, 1441836, 196612, 0, 1507372, 196612, 0, 1572908, 196612, 0, 1638444, 196612, 0, 1703980, 196612, 0, 1769516, 196612, 0, 1835052, 196612, 0, 1835051, 196612, 0, 1900587, 196612, 0, 1966123, 196612, 0, 1966124, 196612, 0, 1900588, 196612, 0, 1900589, 196612, 0, 1835053, 196612, 0, 1769517, 196612, 0, 1703981, 196612, 0, 1638445, 196612, 0, 1572909, 196612, 0, 1507373, 196612, 0, 1441837, 196612, 0, 1441838, 196612, 0, 1376302, 196612, 0, 1310766, 196612, 0, 1245230, 196612, 0, 1179694, 196612, 0, 1114158, 196612, 0, 1048622, 196612, 0, 1048623, 196612, 0, 1114159, 196612, 0, 1179695, 196612, 0, 1245231, 196612, 0, 1310767, 196612, 0, 1376303, 196612, 0, 1441839, 196612, 0, 1507375, 196612, 0, 1507374, 196612, 0, 1572910, 196612, 0, 1638446, 196612, 0, 1703982, 196612, 0, 1769518, 196612, 0, 1835054, 196612, 0, 1900590, 196612, 0, 1835055, 196612, 0, 1769519, 196612, 0, 1703983, 196612, 0, 1638447, 196612, 0, 1572911, 196612, 0, 1572912, 196612, 0, 1507376, 196612, 0, 1441840, 196612, 0, 1376304, 196612, 0, 1310768, 196612, 0, 1245232, 196612, 0, 1179696, 196612, 0, 1114160, 196612, 0, 1048624, 196612, 0, 1048625, 196612, 0, 1114161, 196612, 0, 1179697, 196612, 0, 1245233, 196612, 0, 1310769, 196612, 0, 1376305, 196612, 0, 1441841, 196612, 0, 1507377, 196612, 0, 1572913, 196612, 0, 1638449, 196612, 0, 1638448, 196612, 0, 1703984, 196612, 0, 1769520, 196612, 0, 1703985, 196612, 0, 1703986, 196612, 0, 1638450, 196612, 0, 1572914, 196612, 0, 1507378, 196612, 0, 1441842, 196612, 0, 1376306, 196612, 0, 1310770, 196612, 0, 1245234, 196612, 0, 1179698, 196612, 0, 1310771, 196612, 0, 1376307, 196612, 0, 1441843, 196612, 0, 1507379, 196612, 0, 1572915, 196612, 0, 1638451, 196612, 0, 1703987, 196612, 0, 1638452, 196612, 0, 1966125, 196612, 0, 1310745, 196612, 0)
